Moved to @sendgrid/mail
Switched from nodemailer to SendGrid's API for better reliability (fewer issues with spam filtering)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.14.1"
   }
 }
