Visitor Routes + sendOTP fixes
Added an API endpoint for posting visitor entries

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+    "type": "module",
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.1"
+  },
+  "devDependencies": {
+    "@types/sendgrid": "^2.0.31"
   }
 }
