--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
     "type": "module",
-  "dependencies": {
-    "@sendgrid/mail": "^8.1.4",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "nodemailer": "^6.10.0",
-    "pg": "^8.14.1"
-  },
-  "devDependencies": {
-    "@types/sendgrid": "^2.0.31"
-  }
+    "dependencies": {
+        "@sendgrid/mail": "^8.1.4",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "nodemailer": "^6.10.0",
+        "pg": "^8.14.1"
+    },
+    "devDependencies": {
+        "@types/sendgrid": "^2.0.31",
+        "@typescript-eslint/eslint-plugin": "^8.28.0",
+        "@typescript-eslint/parser": "^8.28.0",
+        "eslint": "^9.23.0"
+    }
 }
