--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-    "type": "module",
-    "dependencies": {
-        "@sendgrid/mail": "^8.1.4",
-        "dotenv": "^16.4.7",
-        "express": "^4.21.2",
-        "nodemailer": "^6.10.0",
-        "pg": "^8.14.1"
-    },
-    "devDependencies": {
-        "@types/sendgrid": "^2.0.31",
-        "@typescript-eslint/eslint-plugin": "^8.28.0",
-        "@typescript-eslint/parser": "^8.28.0",
-        "eslint": "^9.23.0"
-    }
+  "type": "module",
+  "scripts": {
+    "start": "node --import=tsx server/server.ts"
+  },
+  "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.14.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.7",
+    "@types/pg": "^8.11.11",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
+  }
 }
