--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "type": "module",
   "scripts": {
     "start": "node --import=tsx server/server.ts"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
+    "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.14.1"
